# obd2-viewer

./: .gitignore  README.md  messages.mo  obd2-viewer_0.2.0-2_all.deb  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  release.yml
.tx/: config
data/: se.danielnylander.obd2-viewer.desktop
data/man/: obd2-viewer.1
po/: README.md  obd2-viewer.pot  sv.mo  sv.po
src/obd2_viewer/: __main__.py  connection.py  dashboard.py  dtc.py  dtc_database.py  export.py  freeze_frame.py  gauges.py  logger.py  main.py  vehicle_info.py
